--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
-MONOPOLY MINING ORG
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Cripto</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+<!-- Header -->
+<header>
+    <div class="logo">
+        <h1>Mi Cripto</h1>
+    </div>
+    <nav>
+        <ul>
+            <li><a href="#home">Inicio</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#tokenomics">Tokenomics</a></li>
+            <li><a href="#roadmap">Roadmap</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+        </ul>
+    </nav>
+</header>
+
+<!-- Hero Section -->
+<section id="home" class="hero">
+    <div class="hero-content">
+        <h2>La criptomoneda que cambiará el futuro</h2>
+        <p>Invierta con confianza. Únase a nuestra revolución digital.</p>
+        <a href="#tokenomics" class="btn-primary">Explora más</a>
+    </div>
+</section>
+
+<!-- Sección Sobre -->
+<section id="sobre" class="section">
+    <div class="container">
+        <h2>Sobre Mi Cripto</h2>
+        <p>Mi Cripto es una criptomoneda diseñada para el futuro. Con una tecnología de vanguardia, busca ofrecer soluciones rápidas, seguras y transparentes para todos.</p>
+    </div>
+</section>
+
+<!-- Tokenomics -->
+<section id="tokenomics" class="section bg-dark">
+    <div class="container">
+        <h2>Tokenomics</h2>
+        <div class="table-container">
+            <table>
+                <tr>
+                    <th>Distribución</th>
+                    <th>Porcentaje</th>
+                </tr>
+                <tr>
+                    <td>Fondos iniciales</td>
+                    <td>30%</td>
+                </tr>
+                <tr>
+                    <td>Equipo y Desarrollo</td>
+                    <td>20%</td>
+                </tr>
+                <tr>
+                    <td>Marketing</td>
+                    <td>10%</td>
+                </tr>
+                <tr>
+                    <td>Reserva</td>
+                    <td>40%</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</section>
+
+<!-- Roadmap -->
+<section id="roadmap" class="section">
+    <div class="container">
+        <h2>Roadmap</h2>
+        <ul>
+            <li>2025 Q1: Lanzamiento de la criptomoneda.</li>
+            <li>2025 Q2: Integración con plataformas de pagos.</li>
+            <li>2025 Q3: Expansión internacional.</li>
+        </ul>
+    </div>
+</section>
+
+<!-- Footer -->
+<footer id="contacto">
+    <div class="container">
+        <p>&copy; 2025 Mi Cripto. Todos los derechos reservados.</p>
+        <div class="social-links">
+            <a href="#">Facebook</a> | <a href="#">Twitter</a> | <a href="#">Instagram</a>
+        </div>
+    </div>
+</footer>
+
+<script src="script.js"></script>
+</body>
+</html>
