--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Cripto</title>
+    <title>Monopoly Mining</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
 <!-- Header -->
 <header>
     <div class="logo">
-        <h1>Mi Cripto</h1>
+        <h1>Monopoly Mining</h1>
     </div>
+    <div class="menu-toggle" id="menu-toggle">&#9776;</div>
     <nav>
-        <ul>
-            <li><a href="#home">Inicio</a></li>
-            <li><a href="#sobre">Sobre</a></li>
+        <ul id="nav-list">
+            <li><a href="#home">Start</a></li>
             <li><a href="#tokenomics">Tokenomics</a></li>
             <li><a href="#roadmap">Roadmap</a></li>
-            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 </header>
@@ -27,19 +26,19 @@
 <!-- Hero Section -->
 <section id="home" class="hero">
     <div class="hero-content">
-        <h2>La criptomoneda que cambiará el futuro</h2>
-        <p>Invierta con confianza. Únase a nuestra revolución digital.</p>
-        <a href="#tokenomics" class="btn-primary">Explora más</a>
+        <img src="logo.webp" alt="Monopoly Mining Logo">
     </div>
 </section>
 
 <!-- Sección Sobre -->
 <section id="sobre" class="section">
     <div class="container">
-        <h2>Sobre Mi Cripto</h2>
-        <p>Mi Cripto es una criptomoneda diseñada para el futuro. Con una tecnología de vanguardia, busca ofrecer soluciones rápidas, seguras y transparentes para todos.</p>
+        <a href="https://t.co/iLJy6IqxlM" class="btn-primary">Game play</a>
+        <p>COINPOLY is a cryptocurrency designed for the future. With cutting-edge technology, it seeks to offer fast, safe and transparent solutions for everyone.</p>
+
     </div>
 </section>
+
 
 <!-- Tokenomics -->
 <section id="tokenomics" class="section bg-dark">
@@ -48,15 +47,15 @@
         <div class="table-container">
             <table>
                 <tr>
-                    <th>Distribución</th>
-                    <th>Porcentaje</th>
+                    <th>Distribution</th>
+                    <th>Percentage</th>
                 </tr>
                 <tr>
-                    <td>Fondos iniciales</td>
+                    <td>Initial Funds</td>
                     <td>30%</td>
                 </tr>
                 <tr>
-                    <td>Equipo y Desarrollo</td>
+                    <td>Team & Development</td>
                     <td>20%</td>
                 </tr>
                 <tr>
@@ -64,7 +63,7 @@
                     <td>10%</td>
                 </tr>
                 <tr>
-                    <td>Reserva</td>
+                    <td>Reserve</td>
                     <td>40%</td>
                 </tr>
             </table>
@@ -77,23 +76,24 @@
     <div class="container">
         <h2>Roadmap</h2>
         <ul>
-            <li>2025 Q1: Lanzamiento de la criptomoneda.</li>
-            <li>2025 Q2: Integración con plataformas de pagos.</li>
-            <li>2025 Q3: Expansión internacional.</li>
+            <li>2025 Q1: Cryptocurrency Launch.</li>
+            <li>2025 Q2: Integration with Payment Platforms.</li>
+            <li>2025 Q3: International Expansion.</li>
         </ul>
     </div>
 </section>
 
 <!-- Footer -->
-<footer id="contacto">
+<footer id="contact">
     <div class="container">
-        <p>&copy; 2025 Mi Cripto. Todos los derechos reservados.</p>
+        <p>&copy; 2025 My Crypto. All Rights Reserved.</p>
         <div class="social-links">
-            <a href="#">Facebook</a> | <a href="#">Twitter</a> | <a href="#">Instagram</a>
+            <a href="https://basescan.org/token/0x25DbCF1AdB39d2F9271C1CdA071b5a5E40c1AF93">Basescan</a> | <a href="https://x.com/MonopolyMPC">X.com</a> | <a href="https://www.youtube.com/channel/UCB8gPK69nEqVnCVAZMRLcgg">Youtube</a>
         </div>
     </div>
 </footer>
 
 <script src="script.js"></script>
+
 </body>
 </html>
