--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-- Sección Sobre -->
 <section id="sobre" class="section">
     <div class="container">
-        <a href="https://t.co/iLJy6IqxlM" class="btn-primary">Game play</a>
+        <a href="https://t.me/MonopolyMining_bot" class="btn-primary">Game play</a>
         <p>COINPOLY is a cryptocurrency designed for the future. With cutting-edge technology, it seeks to offer fast, safe and transparent solutions for everyone.</p>
 
     </div>
