--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <!-- Footer -->
 <footer id="contact">
     <div class="container">
-        <p>&copy; 2025 My Crypto. All Rights Reserved.</p>
+        <p>&copy; 2025 COINPOLY. All Rights Reserved.</p>
         <div class="social-links">
             <a href="https://basescan.org/token/0x25DbCF1AdB39d2F9271C1CdA071b5a5E40c1AF93">Basescan</a> | <a href="https://x.com/MonopolyMPC">X.com</a> | <a href="https://www.youtube.com/channel/UCB8gPK69nEqVnCVAZMRLcgg">Youtube</a>
         </div>
